[gd_scene load_steps=21 format=2]

[ext_resource path="res://Raw Resources/Sprites/Shit Sprites/Slimeos.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/Slimeo.gd" type="Script" id=2]
[ext_resource path="res://Entities/Enemies/PlayerDetection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Raw Resources/Sprites/Shadows/SmallShadow.png" type="Texture" id=4]
[ext_resource path="res://Entities/Enemies/WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Player/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 9.05539

[sub_resource type="CircleShape2D" id=8]
radius = 192.35

[sub_resource type="CircleShape2D" id=9]
radius = 25.0

[sub_resource type="CircleShape2D" id=10]
radius = 1.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 11.0
height = 0.0

[node name="Slimeo" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 16
collision_mask = 2147483667
script = ExtResource( 2 )
ACCELERATION = 50
KNOCKBACK_AMOUNT = 18

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 6

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "walk"
frame = 4
playing = true

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 0, 7 )
scale = Vector2( 1.6, 1 )
texture = ExtResource( 4 )

[node name="WanderController" parent="." instance=ExtResource( 5 )]
visible = false
wander_range = 128

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false

[node name="Collider" type="CollisionShape2D" parent="." groups=[
"Enemies",
]]
modulate = Color( 0, 1, 0.694118, 1 )
shape = SubResource( 7 )

[node name="PlayerDetection" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.0941176 )
shape = SubResource( 8 )

[node name="SoftCollision" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 0, 4 )

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 9 )

[node name="Hurtbox" parent="." groups=[
"Enemies",
] instance=ExtResource( 6 )]
visible = false
modulate = Color( 1, 0, 0.843137, 1 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
scale = Vector2( 10, 10 )
shape = SubResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
collision_mask = 2147483680
damage = 10

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 11 )
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="PlayerDetection"]

[editable path="SoftCollision"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
